improved show siblings and relations dialogs